# coregix

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: publish-pypi.yml
coregix/cli/: align_image_pair.py  trim_edge_invalid.py
coregix/pipelines/: __init__.py  alignment.py  alignment_large_main.py
coregix/postprocess/: __init__.py  edge_trim.py
coregix/preprocess/: __init__.py  registration.py
manuscript/data/: crowns_fixed.gpkg  crowns_moving.gpkg  figure2_focus_area.gpkg  gcp_img.points
manuscript/scripts/: create_figure1.py  create_figure2.py  create_figure3.py
vhrelastix/: __init__.py
vhrelastix/cli/: align_image_pair.py
vhrelastix/pipelines/: alignment.py
vhrelastix/preprocess/: __init__.py  registration.py
